--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olonade Kelvin - Engineering Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="embedded.html">Embedded Systems</a></li>
-                <li><a href="simulations.html">Simulations</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="Embedded_Systems.html">Embedded Systems</a></li>
+                <li><a href="SImulations.html">Simulations</a></li>
+                <li><a href="Contacts.html">Contact</a></li>
             </ul>
         </nav>
     </header>
