--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
                     <a href="https://x.com/yourhandle">Twitter/X</a>
                     <a href="https://instagram.com/yourhandle">Instagram</a>
-                    <p>WhatsApp: +234-123-456-7890</p>
+                    <p>WhatsApp: +234 7041877890</p>
                     <p>Email: olonadekelvin@email.com</p>
-                    <p>Institutional: kelvin.olonade@unilag.edu.ng</p>
+                    <p>Institutional: 230403021@live.unilag.edu.ng</p>
                 </div>
             </div>
             <button id="menu-toggle">☰</button>
